# shape_matching

./: .gitignore  CMakeLists.txt  feature.cpp  feature.h  feature_util.cpp  main.cpp  main2.cpp  main_rotate.cpp  main_util.h  matching.cpp  matching.h  pattern_util.cpp  pyramid.cpp  pyramid.h  response_map.cpp  response_map.h  similarity.cpp  similarity.h
doc/: SpeardByLocalOr.xlsx  测试数据.xlsx
script/: rotate.py
self_test/: main2.cpp  main_rotate.cpp
src/: CMakeLists.txt  feature.cpp  feature.h  feature_util.cpp  matching.cpp  matching.h  nms.cpp  nms.h  pyramid.cpp  pyramid.h  response_map.cpp  response_map.h  similarity.cpp  similarity.h
src/cuda_icp/: CMakeLists.txt  icp.h
src/cuda_icp/scene/edge_scene/: edge_scene.cpp  edge_scene.h
test/: CMakeLists.txt  test_angle_scale_pair.cpp  test_feature.cpp  test_linearize.cpp  test_mipp.cpp  test_nms.cpp  test_readwrite.cpp  test_response.cpp  test_response_nms.cpp  test_similarity.cpp  test_spread.cpp  test_util.cpp  test_util.h
test_file/: matching.yaml  train.yaml
